[package]
name = "alpamayo"
version = "0.1.0"
authors = ["Lamports Dev"]
edition = "2024"
description = "Part of Solana RPC stack for sealed data"
homepage = "https://lamports.dev"
repository = "https://github.com/lamports-dev/alpamayo"
license = "AGPL-3.0-only"
keywords = ["solana", "rpc"]
publish = false

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
futures = "0.3.31"
json5 = "0.4.1"
lazy_static = "1.4.0"
prometheus = "0.13.4"
richat-shared = { version = "2.5.0", default-features = false, features = ["config", "metrics", "shutdown", "version"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.33"
signal-hook = "0.3.17"
thiserror = "2.0.11"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "env-filter", "json"] }

[build-dependencies]
anyhow = "1.0.96"
cargo-lock = "10.1.0"
git-version = "0.3.9"
vergen = { version = "9.0.4", features = ["build", "rustc"] }

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
