[package]
name = "alpamayo"
version = "0.8.5"
authors = ["Lamports Dev"]
edition = "2024"
description = "Part of Solana RPC stack for sealed data"
homepage = "https://lamports.dev"
repository = "https://github.com/lamports-dev/alpamayo"
license = "Apache-2.0"
keywords = ["solana", "rpc"]
publish = false

[dependencies]
affinity-linux = "1.0.1"
anyhow = "1.0.96"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = "2.9.0"
bitvec = "1.0.1"
bs58 = "0.5.1"
clap = { version = "4.5.30", features = ["derive"] }
crossbeam = "0.8.4"
foldhash = "0.1.5"
futures = "0.3.31"
http-body-util = "0.1.3"
human-size = "0.4.3"
humantime-serde = "1.1.1"
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["server-auto", "server-graceful"] }
json5 = "0.4.1"
jsonrpsee-types = "0.24.8"
libc = "0.2.170"
maplit = "1.0.2"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
num_cpus = "1.16.0"
prost = "0.11.9"
quanta = "0.12.5"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12.14"
richat-client = "2.6.0"
richat-proto = "2.1.0"
richat-shared = { version = "2.9.0", default-features = false, features = ["config", "jsonrpc", "metrics", "shutdown", "version"] }
rocksdb = "0.23.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.33"
signal-hook = "0.3.17"
solana-client = "~2.1.14"
solana-compute-budget = "~2.1.14"
solana-rpc-client = "~2.1.14"
solana-rpc-client-api = "~2.1.14"
solana-sdk = "~2.1.14"
solana-storage-proto = "~2.1.4"
solana-transaction-status = "~2.1.14"
solana-version = "~2.1.14"
thiserror = "2.0.11"
tokio = "1.43.0"
tokio-uring = "0.5.0"
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "env-filter", "json"] }
url = "2.5.4"

[build-dependencies]
anyhow = "1.0.96"
cargo-lock = "10.1.0"
git-version = "0.3.9"
vergen = { version = "9.0.4", features = ["build", "rustc"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
